--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -2322,23 +2322,23 @@
     "# 90% - 1.0 - max_depth = 10, n_estimators = 10\n",
     "\n",
     "# Random Forest - cross validation training accuracy values\n",
-    "# [% of data used to train, accuracy value, rounded accuracy value, changed parameter values]\n",
-    "# 70% - 0.9579916815210932 ~ 0.958\n",
-    "# 70% - 0.9560308972073678 ~ 0.956 - max_depth = 7, min_samples_split = 5\n",
-    "# 70% - 0.9560308972073678 ~ 0.956 - max_depth = 5, min_samples_split = 5\n",
-    "# 70% - 0.9560308972073678 ~ 0.956 - max_depth = 5\n",
-    "# 75% - 0.9579916815210932 ~ 0.958\n",
-    "# 75% - 0.9579916815210932 ~ 0.958 - max_depth = 10\n",
-    "# 80% - 0.9579916815210932 ~ 0.958\n",
-    "# 80% - 0.9560308972073678 ~ 0.956 - max_depth = 7, min_samples_split = 5\n",
-    "# 80% - 0.9560308972073678 ~ 0.956 - max_depth = 5, min_samples_split = 5\n",
-    "# 80% - 0.9540106951871656 ~ 0.954 - max_depth = 10, min_samples_split = 5\n",
-    "# 80% - 0.9560308972073678 ~ 0.956 - max_depth = 5\n",
-    "# 85% - 0.9560308972073678 ~ 0.956\n",
-    "# 85% - 0.9560308972073678 ~ 0.956 - max_depth = 5, min_samples_split = 5\n",
-    "# 85% - 0.9560308972073678 ~ 0.956 - max_depth = 5\n",
-    "# 90% - 0.9579916815210932 ~ 0.956\n",
-    "# 90% - 0.9499702911467617 ~ 0.950 - max_depth = 10, n_estimators = 10\n",
+    "# [% of data used to train, accuracy value, changed parameter values]\n",
+    "# 70% - 0.9559999999999998\n",
+    "# 70% - 0.954 - max_depth = 7, min_samples_split = 5\n",
+    "# 70% - 0.9559999999999998 - max_depth = 5, min_samples_split = 5\n",
+    "# 70% - 0.952 - max_depth = 5\n",
+    "# 75% - 0.9559999999999998\n",
+    "# 75% - 0.954 - max_depth = 10\n",
+    "# 80% - 0.9559999999999998\n",
+    "# 80% - 0.954 - max_depth = 7, min_samples_split = 5\n",
+    "# 80% - 0.9559999999999998 - max_depth = 5, min_samples_split = 5\n",
+    "# 80% - 0.9559999999999998 - max_depth = 10, min_samples_split = 5\n",
+    "# 80% - 0.952 - max_depth = 5\n",
+    "# 85% - 0.9559999999999998\n",
+    "# 85% - 0.9559999999999998 - max_depth = 5, min_samples_split = 5\n",
+    "# 85% - 0.952 - max_depth = 5\n",
+    "# 90% - 0.9559999999999998\n",
+    "# 90% - 0.95 - max_depth = 10, n_estimators = 10\n",
     "\n",
     "# min_samples_split default value = 2\n",
     "# n_estimators default value = 100\n",
