--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -1513,10 +1513,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy scores for each fold: [0.94117647 0.94117647 0.94117647 0.97058824 0.97058824 0.96969697\n",
-      " 0.96969697 0.96969697 0.96969697 0.96969697 0.96969697 0.93939394\n",
-      " 0.93939394 0.93939394 0.93939394]\n",
-      "Average accuracy: 0.9560308972073678\n"
+      "Accuracy scores for each fold: [0.96 0.94 0.94 0.96 0.96 0.96 0.96 0.96\n"
+      "0.96 0.96]\n"
+      "Average accuracy: 0.9559999999999998\n"
      ]
     }
    ],
