--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "e4a7e4a5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "a4ed78bc",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "7ec9e77a",
    "metadata": {},
    "outputs": [],
@@ -33,13 +33,13 @@
     "le_gender = LabelEncoder()\n",
     "df['Gender'] = le_gender.fit_transform(df['Gender'])\n",
     "\n",
-    "df.drop(['Mood_Description', 'Sentiment_Score','Student_ID', 'Stress_Level', 'Anxiety_Score', 'Depression_Score'], axis=1, inplace=True)\n",
+    "df.drop(['Mood_Description', 'Sentiment_Score','Student_ID'], axis=1, inplace=True)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "e089aae5",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "c0800e6e",
    "metadata": {},
    "outputs": [
@@ -73,31 +73,18 @@
       "498   18       0  2.45       Care can now outside real rest that perform.   \n",
       "499   18       2  3.52  Get turn Congress list mouth city decision eas...   \n",
       "\n",
-      "     Sleep_Hours  Steps_Per_Day  Mental_Health_Status  \\\n",
-      "0            6.8           4166                     2   \n",
-      "1            5.1           4949                     2   \n",
-      "2            8.3           7632                     2   \n",
-      "3            8.2           5548                     2   \n",
-      "4            5.9           3698                     0   \n",
-      "..           ...            ...                   ...   \n",
-      "495          5.4           8725                     2   \n",
-      "496          4.5           3692                     0   \n",
-      "497          8.2           6000                     2   \n",
-      "498          6.0           5013                     1   \n",
-      "499          5.6           5440                     0   \n",
-      "\n",
-      "                             Daily_Reflections_Cleaned  fear     anger  \\\n",
-      "0    onto foreign environmental anyone every nearly...   0.0  0.000000   \n",
-      "1            party others visit admit industry country   0.0  0.000000   \n",
-      "2    religious sure wait chance decade according wa...   0.0  0.000000   \n",
-      "3                 task effect entire coach join series   0.0  0.000000   \n",
-      "4    knowledge several camera wait week write quali...   0.0  0.076923   \n",
-      "..                                                 ...   ...       ...   \n",
-      "495   land floor page trade social away animal cut end   0.0  0.000000   \n",
-      "496  almost wide majority technology positive parti...   0.0  0.000000   \n",
-      "497  property answer method call law dream maybe no...   0.0  0.000000   \n",
-      "498                     care outside real rest perform   0.0  0.000000   \n",
-      "499  get turn congress list mouth city decision eas...   0.0  0.000000   \n",
+      "     Sleep_Hours  Steps_Per_Day  Mental_Health_Status  fear     anger  \\\n",
+      "0            6.8           4166                     2   0.0  0.000000   \n",
+      "1            5.1           4949                     2   0.0  0.000000   \n",
+      "2            8.3           7632                     2   0.0  0.000000   \n",
+      "3            8.2           5548                     2   0.0  0.000000   \n",
+      "4            5.9           3698                     0   0.0  0.076923   \n",
+      "..           ...            ...                   ...   ...       ...   \n",
+      "495          5.4           8725                     2   0.0  0.000000   \n",
+      "496          4.5           3692                     0   0.0  0.000000   \n",
+      "497          8.2           6000                     2   0.0  0.000000   \n",
+      "498          6.0           5013                     1   0.0  0.000000   \n",
+      "499          5.6           5440                     0   0.0  0.000000   \n",
       "\n",
       "     anticipation     trust  surprise  sadness       joy   disgust  negative  \\\n",
       "0        0.000000  0.000000  0.000000      0.0  0.000000  0.000000  1.000000   \n",
@@ -125,7 +112,7 @@
       "498  0.666667  \n",
       "499  0.142857  \n",
       "\n",
-      "[500 rows x 18 columns]\n"
+      "[500 rows x 17 columns]\n"
      ]
     }
    ],
@@ -167,17 +154,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "9586ca57",
    "metadata": {},
    "outputs": [],
    "source": [
-    "numerical_cols = ['Age','Gender', 'GPA', 'Sleep_Hours', 'Steps_Per_Day', 'fear', 'anger', 'anticipation', 'trust', 'surprise','sadness', 'joy']"
+    "numerical_cols = ['Age', 'GPA', 'Sleep_Hours', 'Steps_Per_Day', 'fear', 'anger', 'anticipation', 'trust', 'surprise','sadness', 'joy']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "eb4ddfad",
    "metadata": {},
    "outputs": [
@@ -503,7 +490,7 @@
        "[500 rows x 17 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "ade1f74f",
    "metadata": {},
    "outputs": [],
@@ -528,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "b8673a69",
    "metadata": {},
    "outputs": [],
@@ -546,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "9fa7bf84",
    "metadata": {},
    "outputs": [],
@@ -561,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "92f2da01",
    "metadata": {},
    "outputs": [
@@ -620,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "127af28a",
    "metadata": {},
    "outputs": [
